Change some names

--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@ Just the remedy for live music to get your event rocking.</p>
 	<div class="content cf container">
 		<div class="grid-8 push-2 pull-2" style="text-align:center">
       
-			<div style="font-size:30px;margin-top:20px"><a style="font-size:70%" href="mailto:enquiries@humblemischief.com.au">enquiries@humblemischief.com.au</a></div>
+			<div style="font-size:30px;margin-top:20px"><a style="font-size:70%" href="mailto:enquiries@radioremedy.com.au">enquiries@radioremedy.com.au</a></div>
 		</div>
 	</div>
 </section>
 
 <footer class="bg-black">
-	<p id="copyright">© 2016 Humble Mischief.</p>
+	<p id="copyright">© 2019 Radio Remedy.</p>
 </footer>
 <script type="text/javascript" src="./index_files/jquery.min.js"></script>
 <script src="./index_files/script-min.js"></script>
