swap out the humbles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html class="js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths -webkit- svg wf-metallophilesp8-i5-active wf-metallophilesp8-n3-active wf-metallophilesp8-n5-active wf-metallophilesp8-i3-active wf-active" lang="en-US"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><div class="fit-vids-style" id="fit-vids-style" style="display: none;">­<style>                 .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }                                         </style></div>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Humble Mischief</title>
+	<title>Radio Remedy</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -60,13 +60,13 @@
   <section class="parallaxf section1 bg-black" AAA_data-stellar-background-ratio="0.1" style="background-position: 50% 0px;padding-bottom:30px">
 	<div class="content cf container">
 		<div class="push-2 pull-2" style="margin-top:0%">
-			<img src="./img/glffmfpdijhfmcdl.png" alt="Humble Mischief">
+			<img src="./img/glffmfpdijhfmcdl.png" alt="Radio Remedy">
 			<h2 style="text-shadow:1px 2px rgba(0,0,0,0.8);margin-top:-25px">Rockin Melbourne Cover Band</h2>
-			<h3><a href="http://www.humblemischief.com.au/#listen" style="color:crimson;font-size:40px;text-shadow:1px 2px rgba(255,255,255,0.8);margin-top:40px;display:block">Listen</a></h3>
-      <a href="http://www.humblemischief.com.au/#listen" class="arrow-down">Scroll Down</a>
+			<h3><a href="http://www.radioremedy.com.au/#listen" style="color:crimson;font-size:40px;text-shadow:1px 2px rgba(255,255,255,0.8);margin-top:40px;display:block">Listen</a></h3>
+      <a href="http://www.radioremedy.com.au/#listen" class="arrow-down">Scroll Down</a>
 
       <div id="socialIcons" style="text-align:center">
-        <a href="https://www.facebook.com/humblemischief" target="_blank">
+        <a href="https://www.facebook.com/radioremedy" target="_blank">
           <img src="./img/facebook.png" style="display:inline;margin:0 auto;margin-top:60px;margin-right:10px" alt="Link to facebook">
         </a>
         <a href="https://www.youtube.com/channel/UCWKXwTrIYoU-CQzAxjyQF6g" target="_blank">
@@ -90,7 +90,7 @@ Just the remedy for live music to get your event rocking.</p>
           <li>Michael Gibson - Lead Vocals & Rhythm Guitar</li>
           <li>Jason Sandford - Lead Guitar & Backing Vocals</li>
           <li>Dean McKeown - Bass Guitar & Backing Vocals</li>
-          <li>Mihoko - Drums & Percussion</li>
+          <li>Mihoko Sato - Drums & Percussion</li>
         </ul>
       </p>
     </div>
@@ -196,6 +196,7 @@ Just the remedy for live music to get your event rocking.</p>
 	 </div>
   </div>
 </section>
+<!--
         <div class="content cf container" style="font-size:21px">
     <div class="push-1 pull-1">
      
@@ -217,6 +218,7 @@ Just the remedy for live music to get your event rocking.</p>
         </ul>
       </p>
 </section>
+-->
 <section id="contact" class="bg-black " style="padding-bottom:4em">
   <h1>Contact</h1>
 	<div class="content cf container">
