updates song listwq

--- a/index.html
+++ b/index.html
@@ -144,55 +144,48 @@ Just the remedy for live music to get your event rocking.</p>
 	<h1>Sample of our extensive song list</h1>
 	<div class="container cf">
 		<div class="grid-10 push-1 pull-1" style="margin-bottom:0.5em;border:1px solid #bbb;padding:15px">
-        <div class="song">All Star - <span class="artist">Smash Mouth</span></div>
+        <div class="song">25 or 6 to 4 - <span class="artist">Chicago</span></div>
+        <div class="song">All Right Now - <span class="artist">Free</span></div>
+        <div class="song">Always On The Run - <span class="artist">Lenny Kravitz</span></div>
+        <div class="song">Are You Gonna Be My Girl - <span class="artist">Jet</span></div>
         <div class="song">Are You Gonna Go My Way - <span class="artist">Lenny Kravitz</span></div>
-        <div class="song">Bad case of loving you - <span class="artist">Robert Palmer</span></div>
-        <div class="song">Beds are burning - <span class="artist">Midnight Oil</span></div>
-        <div class="song">Birthday - <span class="artist">The Beatles</span></div>
-        <div class="song">Bohemian like you - <span class="artist">The Dandy Warhols</span></div>
-        <div class="song">Burning Love - <span class="artist">Elvis</span></div>
-        <div class="song">Bust a Move - <span class="artist">Young MC</span></div>
+        <div class="song">Bad Case Of Loving You - <span class="artist">Robert Palmer</span></div>
+        <div class="song">Blister In The Sun - <span class="artist">Violent Femmes</span></div>
+        <div class="song">Bohemians Like You - <span class="artist">Dandy Warhols</span></div>
+        <div class="song">Boys Of Summer - <span class="artist">The Ataris</span></div>
+        <div class="song">Burning Love - <span class="artist">Elvis Presley</span></div>
         <div class="song">Centrefold - <span class="artist">J Geils Band</span></div>
-        <div class="song">Cosmic Girl - <span class="artist">Jamiroqui</span></div>
-        <div class="song">Dakota - <span class="artist">Stereophonics</span></div>
+        <div class="song">Come Together - <span class="artist">Beatles (Aerosmith)</span></div>
+        <div class="song">Dani California - <span class="artist">RHCP</span></div>
+        <div class="song">Daughters Of Glory - <span class="artist">Black Sorrows</span></div>
+        <div class="song">Disco Inferno - <span class="artist">The Trammps</span></div>
         <div class="song">Don't Change - <span class="artist">INXS</span></div>
-        <div class="song">Fortunate Son - <span class="artist">Creedence Clear Water Revival</span></div>
-        <div class="song">Get Lucky - <span class="artist">Daft Punk</span></div>
-        <div class="song">Hazy shade of winter - <span class="artist">Simon and Garfunkle</span></div>
-        <div class="song">Heroes - <span class="artist">David Bowie</span></div>
-        <div class="song">Higher Ground - <span class="artist">Red Hot Chilli Peppers</span></div>
-        <div class="song">Hurts so good - <span class="artist">John Cougar Mellencamp</span></div>
-        <div class="song">I was made for loving you - <span class="artist">Kiss</span></div>
-        <div class="song">Jessie’s Girl - <span class="artist">Rick Springfield</span></div>
-        <div class="song">Johnny be good - <span class="artist">Chuck Berry</span></div>
-        <div class="song">Just can’t get enough - <span class="artist">Depeche Mode</span></div>
-        <div class="song">Le Freak - <span class="artist">Chic</span></div>
-        <div class="song">Love Shack - <span class="artist">B52's</span></div>
-        <div class="song">Mamma Mia - <span class="artist">Abba</span></div>
-        <div class="song">Message in a bottle - <span class="artist">The Police</span></div>
-        <div class="song">Miss You - <span class="artist">The Rolling Stones</span></div>
-        <div class="song">Mustang Sally - <span class="artist">The Commitments</span></div>
-        <div class="song">New Sensation - <span class="artist">INXS</span></div>
-        <div class="song">Panama - <span class="artist">Van Halen</span></div>
-        <div class="song">Pump it up - <span class="artist">Elvis Costello</span></div>
-        <div class="song">Rock n Roll all night - <span class="artist">Kiss</span></div>
-        <div class="song">Run to paradise - <span class="artist">Choirboys</span></div>
-        <div class="song">Run to you - <span class="artist">Bryan Adams</span></div>
-        <div class="song">Somebody told me - <span class="artist">The Killers</span></div>
-        <div class="song">Stuck in the middle with you - <span class="artist">Steelers Wheels</span></div>
-        <div class="song">Sweet child o’ mine - <span class="artist">Guns 'n' Roses</span></div>
-        <div class="song">Sweet Home Alabama - <span class="artist">Lynard Skynard</span></div>
+        <div class="song">Fire - <span class="artist">Jimi Hendrix</span></div>
+        <div class="song">Fortunate Son - <span class="artist">CCR</span></div>
+        <div class="song">Hard To Handle - <span class="artist">Black Crowes</span></div>
+        <div class="song">Hurt So Good - <span class="artist">John Cougar</span></div>
+        <div class="song">I Fought The Law - <span class="artist">The Clash</span></div>
+        <div class="song">Jessie's Girl - <span class="artist">Rick Springfield</span></div>
+        <div class="song">Johnny B Goode - <span class="artist">Chuck Berry</span></div>
+        <div class="song">Long Train Running - <span class="artist">Doobie Brothers</span></div>
+        <div class="song">Miss Freelove - <span class="artist">Hoodoo Gurus</span></div>
+        <div class="song">My Sharona - <span class="artist">The Knack</span></div>
+        <div class="song">Nips Are Getting Bigger - <span class="artist">Mental As Anything</span></div>
+        <div class="song">Play That Funky Music - <span class="artist">Wild Cherry</span></div>
+        <div class="song">Pump It Up - <span class="artist">Elvis Costello</span></div>
+        <div class="song">Roadhouse Blues - <span class="artist">Greasy Slicks</span></div>
+        <div class="song">September - <span class="artist">Earth Wind Fire</span></div>
+        <div class="song">Short Skirt Long Jacket - <span class="artist">Cake</span></div>
+        <div class="song">Somebody Told Me - <span class="artist">The Killers</span></div>
+        <div class="song">Stuck In The Middle - <span class="artist">Stealers Wheel</span></div>
+        <div class="song">Sweet Home Alabama - <span class="artist">Lynyrd Skynyrd</span></div>
         <div class="song">Tainted Love - <span class="artist">Soft Cell</span></div>
-        <div class="song">Take a long line - <span class="artist">The Angels</span></div>
         <div class="song">Take Me Out - <span class="artist">Franz Ferdinand</span></div>
-        <div class="song">The boys of summer - <span class="artist">The Ataris</span></div>
-        <div class="song">Thorn in my side - <span class="artist">Eurythmics</span></div>
+        <div class="song">Two Princes - <span class="artist">Spin Doctors</span></div>
         <div class="song">Vertigo - <span class="artist">U2</span></div>
-        <div class="song">Walk Like An Egyptian - <span class="artist">The Bangles</span></div>
-        <div class="song">Walk This Way - <span class="artist">Run DMC</span></div>
-        <div class="song">What I Like About You - <span class="artist">The Romantics</span></div>
-        <div class="song">Would I lie to you - <span class="artist">Eurythmics</span></div>
-        <div class="song">You Shook me - <span class="artist">ACDC</span></div>
+        <div class="song">Video Killed The Radio Star - <span class="artist">Buggles</span></div>
+        <div class="song">What I Like About You - <span class="artist">Romantics</span></div>
+        <div class="song">What's My Scene - <span class="artist">Hoodoo Gurus</span></div>
 	 </div>
   </div>
 </section>
