--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <a href="http://www.radioremedy.com.au/#listen" class="arrow-down">Scroll Down</a>
 
       <div id="socialIcons" style="text-align:center">
-        <a href="https://www.facebook.com/radioremedy" target="_blank">
+        <a href="https://www.facebook.com/Radio-Remedy-102172217953819" target="_blank">
           <img src="./img/facebook.png" style="display:inline;margin:0 auto;margin-top:60px;margin-right:10px" alt="Link to facebook">
         </a>
 <!--
